2000-05-23  Fellmann Joaquim <joaquim@hrnet.fr>

	* contributors.h: added myself

2000-05-19  Szabolcs BAN <shooby@gnome.hu>

	* added myself, corrected name of Istvan Szekeres gratefully..
	 thanx :>

2000-05-06  Alexandre Owen Muniz  <munizao@xprt.net>

	* contributors.dat: Added myself.

2000-05-06  Jacob Berkman  <jacob@helixcode.com>

	* gnome-about.c (main): bind to text domain

2000-05-05  Jacob Berkman  <jacob@helixcode.com>

	* gnome-about.c (main): set das icon

2000-04-24  Dan Mueth <d-mueth@uchicago.edu>

	* Makefile.am: Changed authors.h to contributors.h

2000-04-20  Anders Carlsson  <andersca@gnu.org>

	* contributors.dat: Renamed authors.dat to contributors.dat

	* contributors.h: Renamed authors.h to contributors.h

2000-04-19  Anders Carlsson  <andersca@gnu.org>

	* authors.h (authors): Removed email field from author list.

	* gnome-about.c: Removed email field.

2000-04-18  Andreas Hyden <a.hyden@cyberpoint.se>

	* authors.h: Added myself ...

2000-04-14  Fatih Demir	<kabalak@gmx.net>

	* authors.h : Ok, changed to GNU-style 
	email address ...

2000-03-18  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-about.c (main): Removed the ugly side border from the logo
	frame

2000-03-15  Jason Leach  <leach@wam.umd.edu>

	* gnome-about.c (main): made the whole thing a GnomeDialog instead
	of a GtkWindow with separators and button boxes and an ok button,
	looks a little more GNOME-ish too.
	
	* gnome-about.c (cb_quit): we also need to remove the timeouts
	(otherwise, seemingly at random, a timeout callback could occur
	right after the image/window has been destroyed), fixes bug #7047

	(gdb) bt
	#0  0x804a4e7 in scroll (data=0x0) at gnome-about.c:342
	#1  0x403e75d4 in g_timeout_dispatch (source_data=0x80d5480, 
	    dispatch_time=0xbffff954, user_data=0x0) at gmain.c:1300

	* authors.h: who, me? woo! maybe nobody will notice...
	
Sun Mar 12 09:48:28 2000  George Lebl <jirka@5z.com>
