@@ -1,3 +1,7 @@
+2000-06-02  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-about.c: Dont' crash!
+
 2000-05-23  Fellmann Joaquim <joaquim@hrnet.fr>
 
 	* contributors.h: added myself
